--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,6 @@
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_161/jre/lib/ext/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_161/jre/lib/ext/commons-pool2-2.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_161/jre/lib/ext/ojdbc6.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
