--- a/.classpath
+++ b/.classpath
@@ -1,16 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_161">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/messenger"/>
@@ -20,5 +10,14 @@
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_161/jre/lib/ext/commons-pool2-2.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_161/jre/lib/ext/ojdbc6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/JAVA/apache-tomcat-8.5.30-windows-x64/apache-tomcat-8.5.30/lib/taglibs-standard-compat-1.2.5.jar"/>
+	<classpathentry kind="lib" path="C:/JAVA/apache-tomcat-8.5.30-windows-x64/apache-tomcat-8.5.30/lib/taglibs-standard-impl-1.2.5.jar"/>
+	<classpathentry kind="lib" path="C:/JAVA/apache-tomcat-8.5.30-windows-x64/apache-tomcat-8.5.30/lib/taglibs-standard-jstlel-1.2.5.jar"/>
+	<classpathentry kind="lib" path="C:/JAVA/apache-tomcat-8.5.30-windows-x64/apache-tomcat-8.5.30/lib/taglibs-standard-spec-1.2.5.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
