--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,6 @@
 	<classpathentry kind="lib" path="C:/JAVA/apache-tomcat-8.5.30-windows-x64/apache-tomcat-8.5.30/lib/taglibs-standard-impl-1.2.5.jar"/>
 	<classpathentry kind="lib" path="C:/JAVA/apache-tomcat-8.5.30-windows-x64/apache-tomcat-8.5.30/lib/taglibs-standard-jstlel-1.2.5.jar"/>
 	<classpathentry kind="lib" path="C:/JAVA/apache-tomcat-8.5.30-windows-x64/apache-tomcat-8.5.30/lib/taglibs-standard-spec-1.2.5.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
